syntax = "proto3";

package main;

option go_package = "./proto";

// 添加商品评价表
message AddCommentReq {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  string member_nick_name = 3; //评价者昵称
  string product_name = 4; //商品名称
  int32 star = 5; //评价星数：0->5
  string member_ip = 6; //评价的ip
  int32 show_status = 8; //是否显示，0-不显示，1-显示
  string product_attribute = 9; //购买时的商品属性
  int32 collect_count = 10; //点赞数
  int32 read_count = 11; //阅读数
  string content = 12; //内容
  string pics = 13; //上传图片地址，以逗号隔开
  string member_icon = 14; //评论用户头像
  int32 replay_count = 15; //回复数量

}

message AddCommentResp {
  string pong = 1;
}

// 删除商品评价表
message DeleteCommentReq {
  repeated int64 ids = 1;
}

message DeleteCommentResp {
  string pong = 1;
}

// 更新商品评价表
message UpdateCommentReq {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  string member_nick_name = 3; //评价者昵称
  string product_name = 4; //商品名称
  int32 star = 5; //评价星数：0->5
  string member_ip = 6; //评价的ip
  int32 show_status = 8; //是否显示，0-不显示，1-显示
  string product_attribute = 9; //购买时的商品属性
  int32 collect_count = 10; //点赞数
  int32 read_count = 11; //阅读数
  string content = 12; //内容
  string pics = 13; //上传图片地址，以逗号隔开
  string member_icon = 14; //评论用户头像
  int32 replay_count = 15; //回复数量


}

message UpdateCommentResp {
  string pong = 1;
}


// 查询商品评价表详情
message QueryCommentDetailReq {
    int64 id = 1;
}

message QueryCommentDetailResp {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  string member_nick_name = 3; //评价者昵称
  string product_name = 4; //商品名称
  int32 star = 5; //评价星数：0->5
  string member_ip = 6; //评价的ip
  string create_time = 7; //评价时间
  int32 show_status = 8; //是否显示，0-不显示，1-显示
  string product_attribute = 9; //购买时的商品属性
  int32 collect_count = 10; //点赞数
  int32 read_count = 11; //阅读数
  string content = 12; //内容
  string pics = 13; //上传图片地址，以逗号隔开
  string member_icon = 14; //评论用户头像
  int32 replay_count = 15; //回复数量

}

// 分页查询商品评价表列表
message QueryCommentListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 product_id = 3; //


}

message CommentListData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  string member_nick_name = 3; //评价者昵称
  string product_name = 4; //商品名称
  int32 star = 5; //评价星数：0->5
  string member_ip = 6; //评价的ip
  string create_time = 7; //评价时间
  int32 show_status = 8; //是否显示，0-不显示，1-显示
  string product_attribute = 9; //购买时的商品属性
  int32 collect_count = 10; //点赞数
  int32 read_count = 11; //阅读数
  string content = 12; //内容
  string pics = 13; //上传图片地址，以逗号隔开
  string member_icon = 14; //评论用户头像
  int32 replay_count = 15; //回复数量

}

message QueryCommentListResp {
  int64 total = 1;
  repeated  CommentListData list = 2;
}

// 商品评价表
service CommentService {
  // 添加商品评价表
  rpc AddComment(AddCommentReq) returns (AddCommentResp){}
  // 删除商品评价表
  rpc DeleteComment(DeleteCommentReq) returns (DeleteCommentResp){}
  // 更新商品评价表
  rpc UpdateComment(UpdateCommentReq) returns (UpdateCommentResp ){}
  // 查询商品评价表详情
   rpc QueryCommentDetail(QueryCommentDetailReq) returns (QueryCommentDetailResp){}
  // 查询商品评价表列表
  rpc QueryCommentList(QueryCommentListReq) returns (QueryCommentListResp){}


}
