syntax = "proto3";

package main;

option go_package = "./proto";

// 添加商品属性
message AddProductAttributeReq {
  int64 id = 1; //主键id
  int64 group_id = 2; //属性分组ID
  string name = 3; //属性名称
  int32 input_type = 4; //输入类型：1-手动输入，2-单选，3-多选
  int32 value_type = 5; //值类型：1-文本，2-数字，3-日期
  string input_list = 6; //可选值列表，用逗号分隔
  string unit = 7; //单位
  int32 is_required = 8; //是否必填
  int32 is_searchable = 9; //是否支持搜索
  int32 is_show = 10; //是否显示
  int32 sort = 11; //排序
  int32 status = 12; //状态：0->禁用；1->启用
  int64 create_by = 13; //创建人ID
}

message AddProductAttributeResp {
  string pong = 1;
}

// 删除商品属性
message DeleteProductAttributeReq {
  repeated int64 ids = 1;
}

message DeleteProductAttributeResp {
  string pong = 1;
}

// 更新商品属性
message UpdateProductAttributeReq {
  int64 id = 1; //主键id
  int64 group_id = 2; //属性分组ID
  string name = 3; //属性名称
  int32 input_type = 4; //输入类型：1-手动输入，2-单选，3-多选
  int32 value_type = 5; //值类型：1-文本，2-数字，3-日期
  string input_list = 6; //可选值列表，用逗号分隔
  string unit = 7; //单位
  int32 is_required = 8; //是否必填
  int32 is_searchable = 9; //是否支持搜索
  int32 is_show = 10; //是否显示
  int32 sort = 11; //排序
  int32 status = 12; //状态：0->禁用；1->启用
  int64 update_by = 13; //更新人ID
}

message UpdateProductAttributeResp {
  string pong = 1;
}

// 更新商品属性状态
message UpdateProductAttributeStatusReq {
  repeated int64 ids = 1; //主键id
  int32 status = 12; //状态：0->禁用；1->启用
  int64 update_by = 15; //更新人ID
}

message UpdateProductAttributeStatusResp {
  string pong = 1;
}

// 查询商品属性详情
message QueryProductAttributeDetailReq {
    int64 id = 1;
}

message QueryProductAttributeDetailResp {
  int64 id = 1; //主键id
  int64 group_id = 2; //属性分组ID
  string name = 3; //属性名称
  int32 input_type = 4; //输入类型：1-手动输入，2-单选，3-多选
  int32 value_type = 5; //值类型：1-文本，2-数字，3-日期
  string input_list = 6; //可选值列表，用逗号分隔
  string unit = 7; //单位
  int32 is_required = 8; //是否必填
  int32 is_searchable = 9; //是否支持搜索
  int32 is_show = 10; //是否显示
  int32 sort = 11; //排序
  int32 status = 12; //状态：0->禁用；1->启用
  int64 create_by = 13; //创建人ID
  string create_time = 14; //创建时间
  int64 update_by = 15; //更新人ID
  string update_time = 16; //更新时间

}

// 分页查询商品属性列表
message QueryProductAttributeListReq {
  int64 group_id = 1; //属性分组ID
  string name = 2; //属性名称
  int32 input_type = 3; //输入类型：1-手动输入，2-单选，3-多选
  int32 is_required = 4; //是否必填
  int32 is_searchable = 5; //是否支持搜索
  int32 is_show = 6; //是否显示
  int32 page_num = 7; //第几页
  int32 page_size = 8; //每页的数量
  int32 status = 9; //状态：0->禁用；1->启用
}

message ProductAttributeListData {
  int64 id = 1; //主键id
  int64 group_id = 2; //属性分组ID
  string name = 3; //属性名称
  int32 input_type = 4; //输入类型：1-手动输入，2-单选，3-多选
  int32 value_type = 5; //值类型：1-文本，2-数字，3-日期
  string input_list = 6; //可选值列表，用逗号分隔
  string unit = 7; //单位
  int32 is_required = 8; //是否必填
  int32 is_searchable = 9; //是否支持搜索
  int32 is_show = 10; //是否显示
  int32 sort = 11; //排序
  int32 status = 12; //状态：0->禁用；1->启用
  int64 create_by = 13; //创建人ID
  string create_time = 14; //创建时间
  int64 update_by = 15; //更新人ID
  string update_time = 16; //更新时间

}

message QueryProductAttributeListResp {
  int64 total = 1;
  repeated  ProductAttributeListData list = 2;
}

// 商品属性
service ProductAttributeService {
  // 添加商品属性
  rpc AddProductAttribute(AddProductAttributeReq) returns (AddProductAttributeResp){}
  // 删除商品属性
  rpc DeleteProductAttribute(DeleteProductAttributeReq) returns (DeleteProductAttributeResp){}
  // 更新商品属性
  rpc UpdateProductAttribute(UpdateProductAttributeReq) returns (UpdateProductAttributeResp ){}
  // 更新商品属性状态
  rpc UpdateProductAttributeStatus(UpdateProductAttributeStatusReq) returns (UpdateProductAttributeStatusResp ){}
  // 查询商品属性详情
   rpc QueryProductAttributeDetail(QueryProductAttributeDetailReq) returns (QueryProductAttributeDetailResp){}
  // 查询商品属性列表
  rpc QueryProductAttributeList(QueryProductAttributeListReq) returns (QueryProductAttributeListResp){}


}
